#layout: Fix privacyscore.css to display nicely on smartphones. Fix base to display nicely on smartphones (head meta tags as well as footer spacing)

--- a/privacyscore/frontend/static/frontend/css/privacyscore.css
+++ b/privacyscore/frontend/static/frontend/css/privacyscore.css
@@ -40,7 +40,7 @@ h2 {
 .navbar-default .navbar-nav > li > a {
     color: #333;
     font-weight: 700;
-    font-size: 12px;
+    font-size: 16px;
 }
 
 .navbar li a {
@@ -97,19 +97,8 @@ h2 {
     font-family: "Raleway", sans-serif;
 }
 
-.well-form {
-    width:500px;
-    margin:0 auto;
-}
-
-.btn-well {
-    width:100%;
-    margin:10px 0 15px 0;
-}
-
 .btn-scan {
-    color:#000;
-    text-transform: uppercase;
+    color:#333;
 }
 
 .scan-single {
